# repo-template-py

./: .aqua-checksums.json  .aqua.yaml  .editorconfig  .gitignore  .textlintrc.yaml  Makefile  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  temp_test.py  test_main.py  zizmor.yml
.github/workflows/: pull_request.tests.yml  schedule.issue-reopener.yml  schedule.scorecard.yml  schedule.stale.yml  workflow_call.mypy.yml  workflow_call.ruff.yml  workflow_call.unit-test.yml  workflow_call.zizmor.yml
