# Copyright 2025 Ian Lewis
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
# TODO: Update package metadata
name = "repo-template-py"
version = "0.1.0"
authors = [
  { name="Ian Lewis", email="ian@ianlewis.org" },
]
description = "A small example package"
readme = "README.md"
# NOTE: this should be compatible with the `.python-version` file.
requires-python = ">=3.13.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/ianlewis/repo-template-py"
Issues = "https://github.com/ianlewis/repo-template-py/issues"

[build-system]
# TODO(github.com/ianlewis/repo-template-py/issues/14): Manage the setuptools version automatically.
requires = ["setuptools == 80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["third_party*", "node_modules*"]

[tool.ruff]
# In addition to the standard set of exclusions, omit all tests, plus a specific file.
extend-exclude = ["third_party"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "PT009", # pytest-unittest-assertion: allow unittest assertions
    "FIX", # Allow TODO comments. These are handled by todos/fixme.

    "D203", # incorrect-blank-line-before-class. Incompatible with D211
    "D212", # multi-line-summary-first-line. Incompatible with D213
]
